--- a/DevMedia/Angular/ex2GRUDlembrete/cliente-lembrete/src/app/app.component.html
+++ b/DevMedia/Angular/ex2GRUDlembrete/cliente-lembrete/src/app/app.component.html
@@ -2,5 +2,6 @@
   <a class="navbar-brand" routerLink="">{{ titulo }}</a>
 </nav>
 
-
 <router-outlet></router-outlet>
+
+<app-error-msg></app-error-msg>
